--- a/sass/main.sass
+++ b/sass/main.sass
@@ -1,27 +1,27 @@
 @import "bourbon"
 
 *::-webkit-input-placeholder
-	color: #666
+	color: #fff
 	opacity: 1
 
 *:-moz-placeholder
-	color: #666
+	color: #fff
 	opacity: 1
 
 *::-moz-placeholder
-	color: #666
+	color: #fff
 	opacity: 1
 
 *:-ms-input-placeholder
-	color: #666
+	color: #fff
 	opacity: 1
 
 body input:focus:required:invalid,
 body textarea:focus:required:invalid
-	color: #666
+	color: #fff
 body input:required:valid,
 body textarea:required:valid
-	color: #666
+	color: #fff
 
 //Custom Styles Here
 
