--- a/sass/header.sass
+++ b/sass/header.sass
@@ -1,7 +1,5 @@
 @import "bourbon"
-
-$main-color: #F39F18
-$headers-color: #2c3949
+@import "_var.sass"
 
 body
 	font-size: 15px
@@ -27,6 +25,7 @@ a, a:hover, a:focus, a:active
 
 h1, h2, h3, h4, h5, h6
 	@extend .headers	
+	line-height: em(22px)
 
 h1
 	font-size: em(48px)	
@@ -39,6 +38,7 @@ h3
 
 b, strong
 	font-family: "RalewayBold", $helvetica
+	font-weight: normal 
 
 .before
 	content: ''	
@@ -251,11 +251,19 @@ b, strong
 	font-family: em(22px) 
 	padding: 12px 30px
 	border-bottom: #B97200 3px solid
-	transition: all .5s ease  
+	transition: all .5s ease 
+	text-decoration: none
 	&:hover
 		background-color: #FFB338
+		text-decoration: none
+		color: #111
 	&:active
 		background-color: #DB8C0E
+		text-decoration: none
+		color: #111
+	&:focus
+		text-decoration: none
+		color: #111	
 
 .arrow-wrap
 	@extend .button-wrap
