--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -38,6 +38,12 @@
 		h1
 			margin-top: 0	
 
+	.section-content
+		.s1-bottom-triangle		
+			background-size: cover
+
+	.info-line
+		margin: 40px 0	
 
 /* Small Devices, Tablets */
 @media only screen and (max-width : 768px)
@@ -62,7 +68,32 @@
 		-o-animation: none !important
 		-ms-animation: none !important
 		animation: none !important
+	
+	.info-item
+		max-width: 100%
+		margin-top: 20px
+		margin-bottom: 20px
+		border-bottom: #D6DAE0 1px solid
+		p
+			border: none 
+		&:first-child
+			margin-top: 0
+		h4
+			margin-top: 20px 	
 
+	.s1-bottom
+		.info-item
+			border-color: #546476
+
+	.info-item-wrap:last-child
+		.info-item	
+			border-color: transparent
+
+	.section_1	
+		.section-content
+			background-position: bottom  		
+
+				
 
 /* Extra Small Devices, Phones */
 @media only screen and (max-width : 480px)
@@ -80,8 +111,8 @@
 
 	.main-mnu
 		min-width: 190px	
-	
 
+	
 /* Custom, iPhone Retina */
 @media only screen and (max-width : 320px)
 	.main-mnu
