--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -112,6 +112,10 @@
 	.main-mnu
 		min-width: 190px	
 
+	.s2-item-wrap
+		padding: 0px 10px 
+		width: 140px	
+
 	
 /* Custom, iPhone Retina */
 @media only screen and (max-width : 320px)
