--- a/sass/main.sass
+++ b/sass/main.sass
@@ -55,6 +55,9 @@ body textarea:required:valid
 				bottom: -34px
 				left: 50%
 				transform: translate(-50%, 0)
+		h3
+			text-align: center
+			margin-top: 50px 		
 	.section-bottom
 		background-color: #E5E5E5
 		padding: 50px 0
@@ -111,9 +114,9 @@ body textarea:required:valid
 
 .info-item
 	padding-left: 34px 
-	max-width: 264px 
+	max-width: 320px 
 	line-height: em(19px)
-	margin: 54px 0
+	margin: 48px 0
 	h4
 		margin-top: 0
 		margin-bottom: 10px 
@@ -139,6 +142,50 @@ body textarea:required:valid
 	transform: translate(-50%, 0)
 	z-index: -1
 
+.s2-items	
+	padding-bottom: 20px
+	.s2_item
+		text-align: center 
+		color: #111
+		margin-bottom: 75px
+		display: block 
+		> span
+			display: block
+		&-text
+			font-family: "RalewayBold", $helvetica
+			font-size: em(14px)
+			line-height: em(20px)
+	.img-wrap
+		padding-bottom: 32px
+		margin-bottom: 12px
+		display: block
+		position: relative 
+		&::before
+			content: ''
+			position: absolute
+			height: 1px
+			background-color: $main-color
+			width: 58px 
+			bottom: 0
+			left: 50%
+			transform: translate(-50%, 0)
+		img
+			max-width: 75px
+			max-height: 60px
+
+.img-wrap
+	img
+		width: 100%
+		max-width: 100%
+
+.s2-items-container
+	text-align: center 
+
+.s2-item-wrap
+	display: inline-block 
+	float: none 	
+	padding: 0 15px 
+	width: 185px	
 
 //ALWAYS END
 @import "_media.sass"
