--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -27,6 +27,9 @@
 	.phone
 		padding-right: 65px
 
+	.s3-img-wrap
+		margin-left: 82px 
+
 
 /* Medium Devices, Desktops */
 @media only screen and (max-width : 992px)
@@ -44,6 +47,23 @@
 
 	.info-line
 		margin: 40px 0	
+
+	.s3-img-wrap
+		display: none 	
+
+	.section_3 
+		.info-item-wrap .info-item
+			margin: 0 0 30px 0!important
+		.section-content
+			background-image: none 	
+			min-height: auto 
+
+	.s3-img-wrapper
+		display: none 
+	.section-content 
+		.s1-bottom-triangle
+			background-size: cover	
+
 
 /* Small Devices, Tablets */
 @media only screen and (max-width : 768px)
@@ -92,6 +112,14 @@
 	.section_1	
 		.section-content
 			background-position: bottom  		
+
+	.section_3
+		.section-content 
+			padding-top: 10px
+			.info-item
+				border-color: #546476
+				p
+					margin-bottom: 0		
 
 				
 
