--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -30,6 +30,12 @@
 	.s3-img-wrap
 		margin-left: 82px 
 
+	.triangles-container
+		.tc-item
+			margin-bottom: 15px 
+			&:first-child
+				margin-left: -40px	
+
 
 /* Medium Devices, Desktops */
 @media only screen and (max-width : 992px)
@@ -143,6 +149,11 @@
 	.s2-item-wrap
 		padding: 0px 10px 
 		width: 140px	
+
+	.section_5
+		.triangles-container
+			.tc-item
+				margin-left: 0
 
 	
 /* Custom, iPhone Retina */
