owl-carousel_section_7

--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -155,6 +155,11 @@
 			.tc-item
 				margin-left: 0
 
+	.slider
+		.owl-control
+			.owl-nav
+				top: 8%			
+
 	
 /* Custom, iPhone Retina */
 @media only screen and (max-width : 320px)
