--- a/sass/main.sass
+++ b/sass/main.sass
@@ -40,9 +40,10 @@ body textarea:required:valid
 			text-decoration: none 
 	.section-head
 		margin-bottom: 65px
-		text-align: center 
-		p
+		p, .p
 			margin-top: 60px 
+			text-align: center 
+			animation-delay: .4s 
 			a
 				font-family: "RalewayBold", $helvetica
 		h2
@@ -58,6 +59,7 @@ body textarea:required:valid
 				bottom: -34px
 				left: 50%
 				transform: translate(-50%, 0)
+				border-radius: 10em
 		h3
 			text-align: center
 			margin-top: 50px 		
@@ -65,6 +67,8 @@ body textarea:required:valid
 		background-color: #E5E5E5
 		padding: 50px 0
 		text-align: center 
+		.buttons
+			font-size: em(20px)
 	&::before
 		content: ''
 		height: 6px
@@ -94,6 +98,7 @@ body textarea:required:valid
 		position: absolute
 		bottom: 0 
 		background-image: url(img/s1_triangle.svg)
+		z-index: 2
 		width: 100%
 		background-position: top 
 		background-size: 100% 100%
@@ -103,7 +108,7 @@ body textarea:required:valid
 			margin-top: 30px 
 
 
-.s1_bottom		
+.s1-bottom		
 	padding: 15px 0 65px 
 	background-color: #394B5F
 	.info-item
@@ -125,7 +130,7 @@ body textarea:required:valid
 		margin-bottom: 10px 
 		a
 			font-size: em(24px)
-			line-height: em(13px)
+			line-height: em(14px)
 			text-decoration: underline
 			text-transform: none
 	p
@@ -152,6 +157,9 @@ body textarea:required:valid
 		color: #111
 		margin-bottom: 75px
 		display: block 
+		transition: all .25s ease
+		&:hover
+			color: $main-color
 		> span
 			display: block
 		&-text
@@ -163,6 +171,7 @@ body textarea:required:valid
 		margin-bottom: 12px
 		display: block
 		position: relative 
+		line-height: 60px
 		&::before
 			content: ''
 			position: absolute
@@ -175,6 +184,7 @@ body textarea:required:valid
 		img
 			max-width: 75px
 			max-height: 60px
+			width: auto
 
 .img-wrap
 	img
@@ -189,6 +199,15 @@ body textarea:required:valid
 	float: none 	
 	padding: 0 15px 
 	width: 185px	
+	vertical-align: top
+	opacity: 0
+	transition: all .5s ease 
+	transform: translateY(-25px)
+	&.on
+		opacity: 1
+		transform: translateY(0)
+	&:hover
+		transform: translateY(-10px)
 
 .s_dark
 	background-color: #2C3949 
@@ -214,7 +233,7 @@ body textarea:required:valid
 		padding-bottom: 0
 		padding-top: 60px
 		.info-item
-			margin-top: 80px
+			margin-top: 62px
 			p
 				color: #fff
 				border-bottom: 0
@@ -246,8 +265,7 @@ body textarea:required:valid
 	background-color: $main-color
 	text-align: center 
 	border-radius: 10em
-	margin: 57px 0 0 115px 
-	position: absolute
+	margin: 54px 0 0 115px 
 	img
 		width: 70px
 		margin-top: 29px 
@@ -271,8 +289,14 @@ body textarea:required:valid
 		&-off
 			transform: rotateY(100deg)
 			opacity: 0
+		&:hover
+			border-color: $main-color
+			.img-wrap
+				transform: scale(1.1)	
+		.img-wrap
+			transition: all .25s ease		
 		width: 260px 
-		transition: all 1s ease 
+		transition: all 1.2s ease 
 		display: inline-block 
 		background-color: #2C3949
 		margin: 0 12px 30px
@@ -281,6 +305,7 @@ body textarea:required:valid
 		line-height: em(22px)
 		padding: 54px 28px 48px 
 		vertical-align: top 
+		border-bottom: #1A222B 4px solid
 		h4
 			font-family: "RalewayBold", $helvetica
 			font-size: em(18px)
@@ -303,6 +328,12 @@ body textarea:required:valid
 			display: inline-block 
 			img
 				width: 75px 
+
+.section_4
+	h3
+		margin-bottom: 0
+	.section-pb
+		padding-bottom: 40px				
 
 .triangles-container
 	color: #fff
@@ -340,17 +371,29 @@ body textarea:required:valid
 			margin-top: 43px 
 			margin-left: 60px 
 			text-align: left
-			padding-right: 20px 
+			padding-right: 40px 
+			opacity: 0
+			transition: all 1s ease
+			&-on
+				opacity: 1
 			span
 				font-size: em(20px) 
+				margin-left: -22px
+				position: absolute
 			img
 				height: 40px 
 				float: left
-				margin-right: 15px
+				margin-left: -40px
+				margin-right: 32px
 
 .teams
 	@extend .cards
 	.team
+		&-on
+			opacity: 1
+		&-off
+			transform: rotateY(100deg)
+			opacity: 0
 		.card-icon
 			overflow: hidden
 			line-height: 0
@@ -376,35 +419,30 @@ body textarea:required:valid
 			font-size: em(18px)
 			color: #333 
 
+.section_7
+	.section-head
+		margin-bottom: 44px			
+
 .slider
-	margin-bottom: 50px
+	margin-bottom: 25px
 	.slide
 		text-align: center 
-		margin-bottom: 20px 
+		margin-bottom: 30px 
 		position: revative
 	.owl-item
-		.img-wrap
-			transition: all 1s ease 
+		.img-wrap, .slide-descr, h3, p
+			transition: all 1s ease
 			opacity: 0
 			transform: translate3d(100px, 0, 0)
-			transition-delay: .1s  
 		.slide-descr, h3
-			opacity: 0
-			transform: translate3d(100px, 0, 0)		
-			transition: all 1s ease 
 			transition-delay: .4s
 		p
-			opacity: 0
-			transform: translate3d(100px, 0, 0)		
-			transition: all 1s ease 
-			transition-delay: .8s	
+			transition-delay: .8s
+
 		&.active
-			.img-wrap
-				opacity: 1	 
-				transform: translate3d(0, 0, 0)
-			.slide-descr, h3, p
+			.img-wrap, .slide-descr, h3, p
 				opacity: 1
-				transform: translate3d(0, 0, 0)	
+				transform: translate3d(0, 0, 0)
 		.img-wrap
 			width: 116px 
 			height: 116px 
@@ -416,10 +454,13 @@ body textarea:required:valid
 		h3
 			text-transform: none	
 			font-size: em(24px)
+			margin-bottom: 7px
 		.slide-descr
 			margin-top: 10px
 			font-size: em(14px)
 			color: #6E7B8B
+		p
+			margin-top: 18px	
 	.owl-controls		
 		text-align: center 
 		.owl-dot		
@@ -454,7 +495,7 @@ body textarea:required:valid
 	padding-top: 80px 
 	.forms
 		background-color: #ddd
-		border-bottom: #828282 3px solid
+		border-color: #828282
 		h4
 			color: #2c3949
 		p
@@ -472,17 +513,26 @@ body textarea:required:valid
 			&::after
 				transform: none 
 				left: 0
-		p
+		.p
 			text-align: left	
 
 .s8-items			
 	margin-bottom: 20px 
 	.s8-item
+		transition: all .5s ease 
+		opacity: 0
+		transform: translateY(-25px)
 		text-align: center
+		&.on
+			opacity: 1
+			transform: translateY(0)
+		&:hover	
+			transform: translateY(-10px)
 		.img-wrap
 			height: 72px 
 			img
 				height: 72px 
+				width: auto
 		p
 			font-family: "RalewayBold", $helvetica 
 			font-size: 13px 		
