--- a/sass/header.sass
+++ b/sass/header.sass
@@ -240,7 +240,7 @@ b, strong
 		font-family: "PFCentroSlabProMedium", $helvetica
 		font-size: em(20px) 
 		&:focus
-			box-shadow: 0 -6px #1F2A36
+			box-shadow: 0 -5px $main-color
 			background-color: #394E65
 	.buttons
 		margin-top: 10px 			
@@ -255,6 +255,7 @@ b, strong
 	color: #111 
 	font-family: "PFCentroSlabProBold", $helvetica
 	font-family: em(22px) 
+	font-size: em(22px)
 	padding: 12px 30px
 	border-bottom: #B97200 3px solid
 	transition: all .5s ease 
