--- a/sass/main.sass
+++ b/sass/main.sass
@@ -108,7 +108,7 @@ body textarea:required:valid
 			margin-top: 30px 
 
 
-.s1-bottom		
+.s1_bottom		
 	padding: 15px 0 65px 
 	background-color: #394B5F
 	.info-item
@@ -383,7 +383,7 @@ body textarea:required:valid
 			img
 				height: 40px 
 				float: left
-				margin-left: -40px
+				margin-left: 0px
 				margin-right: 32px
 
 .teams
@@ -558,8 +558,8 @@ body textarea:required:valid
 	cursor: pointer 
 
 #callback 
-	max-width: 300px
-	margin-auto
+	max-width: 340px
+	margin: auto
 	position: relative
 	h4
 		line-height: em(18px)
@@ -568,6 +568,9 @@ body textarea:required:valid
 .mfp-forms
 	.forms
 		background-color: rgba(36, 51, 67, 1)
+		box-shadow: 0 0 18px rgba(0,0,0,.5), 0 0 0 5px #243343
+		border: none
+		border-radius: 1px
 	.mfp-close
 		color: #fff
 	&.mfp-bg
@@ -585,7 +588,24 @@ body textarea:required:valid
 				opacity: 1
 			&.mfp-removing .mfp-content
 				opacity: 0		
-						
+
+.section_cont
+	.cont_p
+		margin-top: 95px 
+		.p_contact
+			margin-top: 20px
+			font-size: em(19px)
+			strong
+				font-size: em(21px)
+	.section-pb
+		.content_top
+			.section-head
+				.cont_p
+					margin-top: 95px
+					.p_cont
+						margin-top: 35px
+						font-size: em(17px)
+
 
 
 //ALWAYS END
